# pykvs_lite

./: .gitignore  README.md  publish_test.sh  pyproject.toml  sample.py  sample_doc.py  sample_kvs.py  setup.py
pykvs/: __init__.py  sample.py
pykvs_lite/: __init__.py  pykvs.py  pykvs_lite.py  sample.py
sample/: memory.py  multi_table.py  sample.py  simple.py
src/pykvs/: __init__.py  sample.py
test/: simple.py
